Ask the user about the resolution he wants to use for loading SVG images

BUG:395074